cmt 24 [28/06]
Se hacen varios cambios para impactar datos de iva en prod, y lineas. Se arregla tema de tabla en presentacion por checks. Se ajusta mantenimiento de prod. Se cambia logica de generar venta para ajustar info de desgloce de iva en compras. se agregan datos de unnidad en prod y aplica iva que toma datos del .prop.